feat: add tags functionality with input validation and dynamic display in form creation

--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -15,6 +15,7 @@
       (submitForm)="handleSubmit()"
       (frameworkSelected)="handleFrameworkSelected($event)"
       (addCode)="addCode($event)"
+      (tagsSubmitted)="addTags($event)"
       (removeCode)="removeCode($event)"
       (allOkChange)="allOk = $event">
     </app-form-creation>
