--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -10,9 +10,9 @@
       <!-- Login -->
       <button
         (click)="isLoggedIn ? logout() : navigateToLogin()"
-        class="relative text-white py-1 font-semibold overflow-hidden group cursor-pointer"
+        class="relative text-white py-1  overflow-hidden group cursor-pointer"
       >
-        <span class="relative z-10">{{ isLoggedIn ? "Logout" : "Login" }}</span>
+        <span class="relative z-10">{{ isLoggedIn ? "" : "Login" }}</span>
         <span
           class="absolute left-0 bottom-0 h-[2px] w-0 bg-purple-600 transition-all duration-100 group-hover:w-full"
         ></span>
