--- a/src/app/features/home/components/circle-frame/circle-frame.html
+++ b/src/app/features/home/components/circle-frame/circle-frame.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="flex items-center justify-between mt-8">
-        <span class="text-purple-500">25 snippets</span>
+        <span class="text-purple-500">{{ counts[title] }} snippets</span>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-5 w-5 text-white"
