--- a/src/app/features/home/components/hero/hero.html
+++ b/src/app/features/home/components/hero/hero.html
@@ -1,26 +1,37 @@
-<section class="flex justify-center items-center text-center">
-  <div class="max-w-4xl mx-auto">
-    <h1 class="text-4xl md:text-6xl xl:text-7xl font-bold leading-tight mb-6 text-gray-200">
+<section class="flex justify-center items-center text-center relative">
+  <div class="max-w-4xl mx-auto z-10">
+    <h1
+      class="text-4xl md:text-6xl xl:text-7xl font-bold leading-tight mb-6 text-gray-200 drop-shadow-sm"
+    >
       Acelera tu desarrollo con
-      <span class="text-purple-600 whitespace-nowrap">snippets útiles</span>
+      <span
+        class="text-purple-600 whitespace-nowrap drop-shadow-sm drop-shadow-purple-600"
+        >snippets útiles</span
+      >
     </h1>
-    <p class="text-xl text-gray-200 mb-8 max-w-2xl mx-auto">
+    <p class="text-xl text-gray-200 mb-8 max-w-2xl mx-auto drop-shadow-2xl">
       Colección curada de fragmentos de código para frameworks modernos. Copia,
       pega y sigue adelante.
     </p>
     <div class="flex flex-col sm:flex-row justify-center gap-4">
       <a
         href="#frameworks"
-        class="bg-purple-700 hover:bg-purple-800 text-white font-medium py-3 px-8 rounded-full transition duration-300 shadow-md"
+        class="bg-purple-700 hover:bg-purple-800 text-white font-medium py-3 px-8 rounded-full transition duration-300 shadow"
       >
         Explorar snippets
       </a>
       <a
         href="#popularSnippet"
-        class="bg-white hover:bg-gray-300 text-purple-600 font-medium py-3 px-8 rounded-full transition duration-300 border border-gray-200"
+        class="bg-white hover:bg-gray-300 text-purple-600 font-medium py-3 px-8 rounded-full transition duration-300 border border-gray-200 shadow"
       >
         Ver populares
       </a>
     </div>
   </div>
+
+  <img
+    src="imgs-hero/code-hero.png"
+    alt="código"
+    class="absolute z-0 blur-sm opacity-30 scale-125 -rotate-6"
+  />
 </section>
