--- a/src/app/features/create-snippet/form-creation/form-creation.html
+++ b/src/app/features/create-snippet/form-creation/form-creation.html
@@ -3,11 +3,11 @@
   (ngSubmit)="submitForm.emit()"
   class="max-w-6xl flex flex-col gap-4"
 >
-  <div class="flex-1 max-h-[500px] overflow-y-auto pr-2">
+  <div class="flex-1 max-h-[500px] overflow-y-auto p-4 ">
     @if (currentStep === 1) {
       <!-- title Input -->
       <div class="flex flex-col gap-2">
-        <label for="" class="text-white font-bold text-base md:text-lg"
+        <label for="titulo" class="text-white font-bold text-base md:text-lg"
           >Título</label
         >
         <div
@@ -36,7 +36,7 @@
         }
 
         <!-- tags -->
-        <label for="" class="text-white font-bold text-base md:text-lg"
+        <label for="tags" class="text-white font-bold text-base md:text-lg"
           >Tags
           <span class="text-gray-300 text-sm font-medium"
             >(Máximo 3)</span
