--- a/src/app/features/create-snippet/form-creation/form-creation.html
+++ b/src/app/features/create-snippet/form-creation/form-creation.html
@@ -3,7 +3,7 @@
   (ngSubmit)="submitForm.emit()"
   class="max-w-6xl flex flex-col gap-4"
 >
-  <div class="flex-1 max-h-[500px] overflow-y-auto p-4 ">
+  <div class="flex-1 max-h-[500px] overflow-y-auto p-4">
     @if (currentStep === 1) {
       <!-- title Input -->
       <div class="flex flex-col gap-2">
@@ -182,16 +182,16 @@
       <!-- framework -->
       <div class="flex gap-2 items-center">
         <label for="framework" class="text-white text-md font-semibold"
-          >Framework seleccionado:
+          >Framework seleccionado: 
         </label>
         <img
-          src="./{{ detectIcon(form.get('framework')?.value) }}"
+          [src]="detectFrameworkIcon(currentFramework)"
           class="w-6 h-6 lg:w-8 lg:h-8 drop-shadow-lg/60"
           [ngClass]="{
-            ' drop-shadow-angular': form.get('framework')?.value === 'Angular',
-            'drop-shadow-react': form.get('framework')?.value === 'React',
-            'drop-shadow-vue': form.get('framework')?.value === 'Vue',
-            'drop-shadow-svelte': form.get('framework')?.value === 'Svelte',
+            ' drop-shadow-angular': currentFramework.name === 'Angular',
+            'drop-shadow-react': currentFramework.name === 'React',
+            'drop-shadow-vue': currentFramework.name === 'Vue',
+            'drop-shadow-svelte': currentFramework.name === 'Svelte',
           }"
           alt="framework"
         />
