--- a/src/app/features/fav-snippets/fav-snippets.html
+++ b/src/app/features/fav-snippets/fav-snippets.html
@@ -1,4 +1,4 @@
-<section class=" mt-28">
+<section class="mt-28">
   <div class="flex flex-col space-y-2 min-h-[90vh]">
     <h1 class="text-3xl font-bold text-gray-100 mb-10">Lista de favoritos</h1>
     <div>
@@ -7,26 +7,31 @@
       </p>
     </div>
     @if (isLoading) {
-    <div class="flex justify-center items-center h-64">
-      <app-snippet-loading></app-snippet-loading>
-    </div>
+      <div class="flex justify-center items-center h-64">
+        <app-snippet-loading></app-snippet-loading>
+      </div>
     } @else {
-    <div class="columns-1 md:columns-2 2xl:columns-3 mt-4">
-      @for (item of snippetsUser; track item.uid) {
-      <app-box-snippet
-        [isFavourite]="true"
-        [snippet]="item"
-        (favourite)="(true)"
-        (showModal)="openModal($event)"
-      ></app-box-snippet>
+      @if (snippetsUser.length > 0) {
+        <div class="columns-1 md:columns-2 2xl:columns-3 mt-4">
+          @for (item of snippetsUser; track item) {
+            <app-box-snippet
+              [isFavourite]="true"
+              [snippet]="item"
+              (favourite)="(true)"
+              (showModal)="openModal($event)"
+            ></app-box-snippet>
+          }
+        </div>
+      } @else {
+        <p class="text-gray-400 justify-center items-center flex">Aún no hay snippets en favoritos</p>
       }
-    </div>
 
-    @if (showModal) {
-    <app-modal-snippet
-      [snippet]="selectedSnippet"
-      (disabledModal)="closeModal()"
-    ></app-modal-snippet>
-    } }
+      @if (showModal) {
+        <app-modal-snippet
+          [snippet]="selectedSnippet"
+          (disabledModal)="closeModal()"
+        ></app-modal-snippet>
+      }
+    }
   </div>
 </section>
